--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
         <div class="main-navigation">
             <div class="container">
                 <a class="header-logo" href="index.html">
-                    <img src="img/logo-technomart.svg" width="108" height="19" alt="Логотип магазина «Техномарт»">
+                    <img src="img/logo-technomart.svg" width="110" height="19" alt="Логотип магазина «Техномарт»">
                 </a>
                 <div class="user-wrapper">
                     <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
@@ -34,19 +34,24 @@
     </div>
     <div class="container">
         <div class="header-info">
-            <p class="site-title">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
+            <p class="site-title">Интернет-магазин строительных материалов<br>и инструментов для ремонта</p>
             <div class="header-contacts">
                 <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-                <p class="header-info-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                <p class="header-info-adresse">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </div>
             <div class="user-navigation user-catalog-navigation">
                 <div class="account-name">
                     <a class="account-link-name" href="#">Равшан Джамшутович</a>
                     <a class="profile-link" href="#" aria-label="Профайл пользователя">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18"><path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+                            <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/>
+                        </svg>
                     </a>
                     <a class="logout-link" href="index.html" aria-label="Выйти из аккаунта">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17"><g fill="#c5c5c5"><path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z"/><path fill="#c5c5c5" d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/></g></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
+                            <g fill="#c5c5c5"><path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z"/>
+                            <path fill="#c5c5c5" d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
+                        </g></svg>
                     </a>
                 </div>
                 <div class="account-data">
@@ -57,13 +62,13 @@
             </div>
             <nav class="site-navigation">
                 <ul class="site-navigation-list">
-                  <li><a href="#">Главная</a></li>
+                  <li><a href="index.html">Главная</a></li>
                   <li><a href="#">Компания</a></li>
                   <li><a href="catalog.html">Каталог</a></li>
                   <li><a href="#">Новости</a></li>
                   <li><a href="#">Спецпредложения</a></li>
                   <li><a href="#">Доставка</a></li>
-                  <li><a href="#">Контаткты</a></li>
+                  <li><a href="#">Контакты</a></li>
                 </ul>
               </nav>
         </div>
@@ -104,9 +109,9 @@
             <div class="toggle toggle-max"></div>
           </div>
                         <div class="range-slider">
-                            <input class="value-min" type="number" value="0" name="min">
+                            <input class="value value-min" type="number" value="0" name="min">
                             <span>&#8212;</span>
-                            <input class="value-max" type="number" value="30000" name="max">
+                            <input class="value value-max" type="number" value="30000" name="max">
                         </div>
                     </fieldset>
                     <fieldset class="filter-fieldset manufacturers-fieldset">
@@ -163,12 +168,12 @@
                 <div class="sort-row">
                     <p>Сортировка:</p>
                     <ul class="sort-row-list">
-                        <li><a class="sort-row-item" href="#">По цене</a></li>
+                        <li><a class="sort-row-item sort-row-item-current" href="#">По цене</a></li>
                         <li><a class="sort-row-item" href="#">По типу</a></li>
                         <li><a class="sort-row-item" href="#">По функционалу</a></li>
                     </ul>
                     <div class="sort-row-triangles-wrapper">
-                        <a class="sort-triangle sort-up-triangle" href="#" aria-label="Сортировка по возрастанию"></a>
+                        <a class="sort-triangle sort-up-triangle sort-triangle-current" href="#" aria-label="Сортировка по возрастанию"></a>
                         <a class="sort-triangle sort-down-triangle" href="#" aria-label="Сортировка по убыванию"></a>
                     </div>
                     </div>
@@ -186,7 +191,7 @@
                                 <p class="catalog-category">Перфоратор <b>bosch</b></p>
                                 <p class="catalog-item-title">bfg 3000</p>
                             </div>
-                            <p class="price line-throuh-price">22500 Р.</p>
+                            <p class="price line-through-price">22500 Р.</p>
                             <p class="price price-label">15500 Р.</p>
                         </li>
                         <li class="catalog-item catalog-page-item">
@@ -201,7 +206,7 @@
                                 <p class="catalog-category">Перфоратор <b>bosch</b></p>
                                 <p class="catalog-item-title">bfg 6000</p>
                             </div>
-                            <p class="price line-throuh-price">30500 Р.</p>
+                            <p class="price line-through-price">30500 Р.</p>
                             <p class="price price-label">25500 Р.</p>
 
                         </li>
@@ -232,7 +237,7 @@
                                 <p class="catalog-category">Перфоратор <b>bosch</b></p>
                                 <p class="catalog-item-title">bfg 3000</p>
                             </div>
-                            <p class="price line-throuh-price">22500 Р.</p>
+                            <p class="price line-through-price">22500 Р.</p>
                             <p class="price price-label">15500 Р.</p>
                         </li>
                         <li class="catalog-item catalog-page-item">
@@ -248,7 +253,7 @@
                                 <p class="catalog-category">Перфоратор <b>bosch</b></p>
                                 <p class="catalog-item-title">bfg 6000</p>
                             </div>
-                            <p class="price line-throuh-price">30500 Р.</p>
+                            <p class="price line-through-price">30500 Р.</p>
                             <p class="price price-label">25500 Р.</p>
                         </li>
                         <li class="catalog-item catalog-page-item">
@@ -279,7 +284,7 @@
                                 <p class="catalog-category">Перфоратор <b>bosch</b></p>
                                 <p class="catalog-item-title">bfg 3000</p>
                             </div>
-                            <p class="price line-throuh-price">22500 Р.</p>
+                            <p class="price line-through-price">22500 Р.</p>
                             <p class="price price-label">15500 Р.</p>
                         </li>
                         <li class="catalog-item catalog-page-item">
@@ -294,7 +299,7 @@
                                 <p class="catalog-category">Перфоратор <b>bosch</b></p>
                                 <p class="catalog-item-title">bfg 6000</p>
                             </div>
-                            <p class="price line-throuh-price">30500 Р.</p>
+                            <p class="price line-through-price">30500 Р.</p>
                             <p class="price price-label">25500 Р.</p>
                         </li>
                         <li class="catalog-item catalog-page-item">
@@ -327,12 +332,11 @@
             <div class="container">
             <h2 class="visually-hidden">Информация о перфораторах</h2>
             <p class="caption">Пара слов о перфораторах</p>
-            <p class="service-desc">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и
-                долбления отверстий в кирпиче, бетоне и камне.<br>
-                Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
-                дрели, шуруповерта и отбойного молотка.<br>
-                В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
-                ударная дрель.</p>
+            <p class="service-desc">
+                Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+                Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
+                В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+            </p>
             </div>
         </section>
     </main>
@@ -353,7 +357,7 @@
           </div>
           <div class="footer-wrap footer-second-line-wrapper">
             <div class="footer-contacts-aside">
-            <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p class="footer-adresse">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             </div>
             <ul class="footer-list footer-service-list">
@@ -368,21 +372,19 @@
         <div class="footer-aside">
           <div class="container">
             <div class="footer-aside-container">
-          <p>&copy; 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+          <p class="company-rights">&copy; 2010–2019 Компания «Техномарт» Все права защищены</p>
           <ul class="footer-list footer-social-list">
             <li class="social-item icon-vk"><a href="#" aria-label="Вконтакте"></a></li>
             <li class="social-item icon-fb"><a href="#" aria-label="Фейсбук"></a></li>
             <li class="social-item icon-insta"><a href="#" aria-label="Инстаграм"></a></li>
           </ul>
-          <div class="footer-contacts">
             <div class="footer-contacts-container footer-contacts-email">
-            <p>Обратная связь:<br>
-              <a href="#">mail@htmlacademy.ru</a></p>
+            <p>Обратная связь:</p>
+              <a href="#">mail@htmlacademy.ru</a>
             </div>
             <div class="footer-contacts-container footer-contacts-developers">
-            <p>Разработано —<br>
-             <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-            </div>
+            <p>Разработано —</p>
+             <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
             </div>
         </div>
       </div>
@@ -396,6 +398,7 @@
             <button class="main-buttons continue-button" type="button">Продолжить покупки</button>
         </div>
     </div>
+    <button class="modal-close" type="button">Закрыть</button>
     </div>
 </body>
 
