--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="main-navigation">
         <div class="container">
           <a class="header-logo">
-            <img src="img/logo-technomart.svg" width="108" height="19" alt="Логотип магазина «Техномарт»">
+            <img src="img/logo-technomart.svg" width="110" height="19" alt="Логотип магазина «Техномарт»">
           </a>
           <div class="user-wrapper">
             <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
@@ -34,14 +34,17 @@
     </div>
     <div class="container">
     <div class="header-info">
-      <p class="site-title">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
+      <p class="site-title">Интернет-магазин строительных материалов<br>и инструментов для ремонта</p>
       <div class="header-contacts">
         <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-        <p class="header-info-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p class="header-info-adresse">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
       <div class="user-navigation user-index-navigation">
         <a class="account-link account-link-login" href="">
-          <svg class="icon-login" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"/><path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/></svg>
+          <svg class="icon-login" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+            <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"/>
+            <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/>
+          </svg>
           Войти</a>
         <a class="account-link account-link-registration" href="">Регистрация</a>
       </div>
@@ -54,7 +57,7 @@
         <li><a href="#">Новости</a></li>
         <li><a href="#">Спецпредложения</a></li>
         <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контаткты</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
       </div>
@@ -80,12 +83,18 @@
         </ul>
           <img src="img/icons/icon-tools.svg" width="75" height="61" alt="Инструмент">
         </div>
-        <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+        <input class="visually-hidden" type="radio" id="product-1-toggle" name="toggle" checked>
+        <input class="visually-hidden" type="radio" id="product-2-toggle" name="toggle">
+        <input class="visually-hidden" type="radio" id="product-arrow-left" name="arrow" checked>
+        <input class="visually-hidden" type="radio" id="product-arrow-right" name="arrow">
         <div class="slider">
-          <div class="slider-controls">
-            <label for="product-1">Первый</label>
-            <label for="product-2">Второй</label>
+          <div class="slider-controls-toggle">
+            <label class="product-toggle" for="product-1-toggle">Первый</label>
+            <label class="product-toggle" for="product-2-toggle">Второй</label>
+          </div>
+          <div class="slider-controls-arrow">
+            <label class="product-arrow product-arrow-left" for="product-arrow-left">Первый</label>
+            <label class="product-arrow product-arrow-right" for="product-arrow-right">Второй</label>
           </div>
           <ul class="slider-list">
             <li class="slider-item slide-1" id="slide1">
@@ -99,8 +108,6 @@
               <a class="main-buttons" href="catalog.html">Открыть каталог</a>
             </li>
           </ul>
-          <img class="arrow-left" src="img/icons/icon-left.svg" width="22" height="40" alt="Стрелка назад">
-          <img class="arrow-right" src="img/icons/icon-right.svg" width="22" height="40" alt="Стрелка вперд">
       </div>
       </div>
       <div class="second-service-column">
@@ -149,7 +156,7 @@
               <p class="catalog-category">Перфоратор <b>bosch</b></p>
               <p class="catalog-item-title">bfg 9000</p>
             </div>
-            <p class="price line-throuh-price">32500 Р.</p>
+            <p class="price line-through-price">32500 Р.</p>
             <p class="price price-label">25500 Р.</p>
           </li>
           <li class="catalog-item index-page-item">
@@ -164,7 +171,7 @@
               <p class="catalog-category">Перфоратор <b>bosch</b></p>
               <p class="catalog-item-title">bfg 3000</p>
             </div>
-            <p class="price line-throuh-price">22500 Р.</p>
+            <p class="price line-through-price">22500 Р.</p>
             <p class="price price-label">15500 Р.</p>
           </li>
           <li class="catalog-item index-page-item">
@@ -180,7 +187,7 @@
               <p class="catalog-category">Перфоратор <b>bosch</b></p>
               <p class="catalog-item-title">bfg 6000</p>
             </div>
-            <p class="price line-throuh-price">30500 Р.</p>
+            <p class="price line-through-price">30500 Р.</p>
             <p class="price price-label">25500 Р.</p>
           </li>
           <li class="catalog-item index-page-item">
@@ -262,7 +269,7 @@
       <div class="container">
       <div class="info-article-container service-article">
         <p class="caption">Сервисы</p>
-        <p class="service-desc">Хороший интернет-магазин отличается от плохого не только ценами!<br>
+        <p class="service-desc advantages-desc">Хороший интернет-магазин отличается от плохого не только ценами!
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       </div>
       <div class="preferences-container">
@@ -279,22 +286,29 @@
       </ul>
       <div class="info-service info-delivery">
         <p class="service-item-title">Доставка</p>
-        <p class="service-desc">Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно
-          бесплатно!<br>Ведь мы
-          неплохо
-          заработаем,<br>поднимая его на ваш этаж!</p>
+        <p class="service-desc service-delivery-desc">
+          Мы с удовольствием доставим ваш товар прямо<br>
+          к вашему подъезду совершенно бесплатно!
+          Ведь мы неплохо заработаем,<br>
+          поднимая его на ваш этаж!
+        </p>
       </div>
       <div class="info-service info-guarantees">
         <p class="service-item-title">Гарантия</p>
-        <p class="service-desc">Если купленный у нас товар поломается или заискрит,<br>
-          а также в случае пожара, спровоцированного его возгоранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы
-          обменяем<br>сгоревший товар на новый.<br>
-          Дом уж восстановите как-нибудь сами.</p>
+        <p class="service-desc service-guarantees-desc">
+          Если купленный у нас товар поломается или заискрит,<br>
+          а также в случае пожара, спровоцированного его возгоранием,
+          вы всегда можете быть уверены в нашей гарантии. Мы обменяем
+          сгоревший товар на новый.<br>
+          Дом уж восстановите как-нибудь сами.
+        </p>
       </div>
       <div class="info-service info-credit">
         <p class="service-item-title">Кредит</p>
-        <p class="service-desc">Залезть в долговую яму стало проще!<br>
-          Кредитные консультанты придут вам на помощь.</p>
+        <p class="service-desc service-credit-desc">
+          Залезть в долговую яму стало проще!<br>
+          Кредитные консультанты придут вам на помощь.
+        </p>
         <a class="main-buttons" href="#">Отправить заявку</a>
       </div>
     </div>
@@ -305,14 +319,12 @@
       <section class="aside-column advantages">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <p class="caption">Компания «Техномарт»</p>
-        <p class="service-desc">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
-          строительства не
-          оставит
-          равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p class="service-desc">Мы можем доставить ваш товар в самые отдаленные точки России!<br>Техномарт работает со
-          многими
-          транспортными
-          компаниями: </p>
+        <p class="service-desc">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+          строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+        </p>
+        <p class="service-desc delivery-info-desc">Мы можем доставить ваш товар в самые отдаленные точки России!
+          Техномарт работает со многими транспортными компаниями:
+        </p>
         <ul class="delivery-companies-list">
           <li class="company-item">Деловые линии</li>
           <li class="company-item">Автотрейдинг</li>
@@ -323,7 +335,7 @@
       <section class="aside-column contact-info">
         <h2 class="visually-hidden">Контактная информация</h2>
         <p class="caption">Контакты</p>
-        <p class="service-desc">Вы можете забрать товар сами,<br>заехав в наш офис:</p>
+        <p class="service-desc contact-info-desc">Вы можете забрать товар сами, заехав в наш офис:</p>
         <a href="#">
           <img  class="small-map" src="img/map-small.png" width="300" height="158"
             alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
@@ -350,7 +362,7 @@
       </div>
       <div class="footer-wrap footer-second-line-wrapper">
         <div class="footer-contacts-aside">
-        <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p class="footer-adresse">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
         </div>
         <ul class="footer-list footer-service-list">
@@ -365,21 +377,19 @@
     <div class="footer-aside">
       <div class="container">
         <div class="footer-aside-container">
-      <p>&copy; 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+      <p class="company-rights">&copy; 2010–2019 Компания «Техномарт» Все права защищены</p>
       <ul class="footer-list footer-social-list">
         <li class="social-item icon-vk"><a href="#" aria-label="Вконтакте"></a></li>
         <li class="social-item icon-fb"><a href="#" aria-label="Фейсбук"></a></li>
         <li class="social-item icon-insta"><a href="#" aria-label="Инстаграм"></a></li>
       </ul>
-      <div class="footer-contacts">
         <div class="footer-contacts-container footer-contacts-email">
-        <p>Обратная связь:<br>
-          <a href="#">mail@htmlacademy.ru</a></p>
+        <p>Обратная связь:</p>
+          <a href="#">mail@htmlacademy.ru</a>
         </div>
         <div class="footer-contacts-container footer-contacts-developers">
-        <p>Разработано —<br>
-         <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-        </div>
+        <p>Разработано —</p>
+         <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </div>
     </div>
   </div>
@@ -408,15 +418,31 @@
         </button>
       </div>
     </form>
+    <button class="modal-close" type="button">Закрыть</button>
   </div>
+  
   <div class="modal-window modal-map-window">
     <h2 class="visually-hidden">
       Как до нас добраться
     </h2>
+    <a href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSEQPQFtjfXVyeXpgYQ==/?ll=30.323118%2C59.938635&sll=30.304899%2C59.918077&source=wizgeo&sspn=1.333466%2C0.410950&utm_medium=maps-desktop&utm_source=serp&z=16.64">
       <img src="img/map-big.png" width="940" height="446"
-        alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
-
+      alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+      <button class="modal-close" type="button">Закрыть</button>
+    </a>
   </div>
+
+  <div class="modal-window modal-cart-success">
+    <div class="cart-success-wrapper">
+    <p>Товар добавлен в корзину!</p>
+    <div class="modal-cart-buttons">
+        <a class="main-buttons" href="">Оформить заказ</a>
+        <button class="main-buttons continue-button" type="button">Продолжить покупки</button>
+    </div>
+</div>
+<button class="modal-close" type="button">Закрыть</button>
+</div>
+
 </body>
 
 </html>
